--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@ body
 #container
 {
     width: 70%;
-    padding: 1em;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -19,4 +18,39 @@ body
 #container h1
 {
     font-size: 20px;
+}
+
+#post {
+      padding: 1em;
+}
+
+#cabecera {
+  display: flex;
+  justify-content: space-between;
+  background-color: lightblue;
+  padding: 1em;
+}
+
+ul {
+  display: flex;
+  margin: 0;
+
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  margin-right: 1em;
+  display: flex;
+  padding-top: 0.5em;
+  color: white;
+  text-decoration: none;
+}
+
+img {
+  width: 2em;
+  height: 2em;
+  border: 1px solid black;
 }
